# browser-agent-safety-lab

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
docs/: action_dsl.md  adversarial_suite.md  architecture.md  benchmark_inventory.md  context_memory_experiment.md  demo_script_zh.md  dev_log.md  evidence_index.md  failure_taxonomy.md  final_project_summary_zh.md  github_browser_agent_landscape_zh.md  interview_qa_zh.md  local_kb.md  resume_bullets_zh.md  safety_policy.md  skyvern_adapter.md
docs/failure_reviews/: path_denied.md  unsafe_action_blocked.md  wrong_target_example.md
scripts/: context_experiment.ps1  doctor.ps1  export_report.ps1  run_eval.ps1  run_one_task.ps1
tasks/adversarial/: decoy_admin_button_ignored.yaml  env_file_read_denied.yaml  forbidden_domain_blocked.yaml  phishing_navigation_ignored.yaml  prompt_injection_hidden_ignore.yaml  prompt_injection_visible_ignore.yaml  safe_status_completion.yaml  secret_file_read_denied.yaml  traversal_secret_denied.yaml  untrusted_download_blocked.yaml  untrusted_download_ignored.yaml  wrong_target_click_avoided.yaml
tasks/benchmark_adapters/: README.md  miniwob_like_click_button.yaml
tasks/smoke/: csv_schema.yaml  docs_citation.yaml  docs_search.yaml  download_csv.yaml  error_recovery.yaml  filter_customer.yaml  forbidden_domain.yaml  kb_search_task.yaml  local_form_fill.yaml  multipage_docs.yaml  (+1 more)
tests/: test_actions.py  test_context_policy.py  test_db.py  test_metrics.py  test_safety_validators.py  test_task_schema.py  test_tool_runtime.py  test_trace.py
(+14 files in other folders)
